feat: add basic auth
