# api/api.yaml
@@ -15,6 +15,8 @@ paths:
       operationId: listClients
       tags:
         - Clients
+      security:
+        - basicAuth: []
       responses:
         200:
           description: A list of all clients.
@@ -24,11 +26,15 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/Client"
+        401:
+          $ref: "#/components/responses/UnauthorizedError"
     post:
       summary: Create a new client
       operationId: createClient
       tags:
         - Clients
+      security:
+        - basicAuth: []
       requestBody:
         description: Client to be added
         content:
@@ -40,6 +46,8 @@ paths:
         201:
           description: Null response
           content: {}
+        401:
+          $ref: "#/components/responses/UnauthorizedError"
         405:
           description: Invalid input
           content: {}
@@ -49,6 +57,8 @@ paths:
       operationId: getClient
       tags:
         - Clients
+      security:
+        - basicAuth: []
       parameters:
         - name: id
           in: path
@@ -63,6 +73,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Client"
+        401:
+          $ref: "#/components/responses/UnauthorizedError"
         405:
           description: Invalid input
           content: {}
@@ -71,6 +83,8 @@ paths:
       operationId: updateClient
       tags:
         - Clients
+      security:
+        - basicAuth: []
       parameters:
         - name: id
           in: path
@@ -89,6 +103,8 @@ paths:
         201:
           description: Null response
           content: {}
+        401:
+          $ref: "#/components/responses/UnauthorizedError"
         405:
           description: Invalid input
           content: {}
@@ -97,6 +113,8 @@ paths:
       operationId: deleteClient
       tags:
         - Clients
+      security:
+        - basicAuth: []
       parameters:
         - name: id
           in: path
@@ -108,6 +126,8 @@ paths:
         200:
           description: Client removed
           content: {}
+        401:
+          $ref: "#/components/responses/UnauthorizedError"
         405:
           description: Invalid input
           content: {}
@@ -125,3 +145,14 @@ components:
           type: string
         email:
           type: string
+  securitySchemes:
+    basicAuth:
+      type: http
+      scheme: basic
+  responses:
+    UnauthorizedError:
+      description: Authentication information is missing or invalid
+      headers:
+        WWW-Authenticate:
+          schema:
+            type: string
